[Fixes #417] Upgrade Pax URL Aether to Maven 3.9.5, Maven Resolver 1.9.x and MiMa
* split repositories supported
* system properties mode (off by default, related to http.proxyXXX
  properties)
* more rational default values (global checksum/update policies)