@@ -16,11 +16,14 @@
 package org.ops4j.pax.url.mvn.internal;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 import static org.junit.Assert.*;
 
 import org.junit.Test;
+import org.ops4j.pax.url.mvn.internal.config.MavenRepositoryURL;
 
 public class ParserTest
 {
@@ -75,7 +78,7 @@ public class ParserTest
     }
 
     @Test
-    public void behaviorSnapshotEnbled()
+    public void behaviorSnapshotEnabled()
         throws MalformedURLException
     {
         Parser parser;
@@ -93,9 +96,9 @@ public class ParserTest
         assertEquals( "Artifact", "artifact", parser.getArtifact() );
         assertEquals( "Version", "LATEST", parser.getVersion() );
         assertEquals( "Type", "jar", parser.getType() );
-        assertEquals( "Classifier", null, parser.getClassifier() );
+        assertNull("Classifier", parser.getClassifier());
         assertEquals( "Artifact path", "group/artifact/LATEST/artifact-LATEST.jar", parser.getArtifactPath() );
-        assertEquals( "repository", new URL( "http://repository/" ), parser.getRepositoryURL().getURL() );
+        assertEquals( "repository", URI.create( "http://repository/" ), parser.getRepositoryURL().getURI() );
     }
 
     @Test
@@ -107,9 +110,9 @@ public class ParserTest
         assertEquals( "Artifact", "artifact", parser.getArtifact() );
         assertEquals( "Version", "LATEST", parser.getVersion() );
         assertEquals( "Type", "jar", parser.getType() );
-        assertEquals( "Classifier", null, parser.getClassifier() );
+        assertNull("Classifier", parser.getClassifier());
         assertEquals( "Artifact path", "group/artifact/LATEST/artifact-LATEST.jar", parser.getArtifactPath() );
-        assertEquals( "repository", null, parser.getRepositoryURL() );
+        assertNull("repository", parser.getRepositoryURL());
     }
 
     @Test
@@ -121,9 +124,9 @@ public class ParserTest
         assertEquals( "Artifact", "artifact", parser.getArtifact() );
         assertEquals( "Version", "version", parser.getVersion() );
         assertEquals( "Type", "type", parser.getType() );
-        assertEquals( "Classifier", null, parser.getClassifier() );
+        assertNull("Classifier", parser.getClassifier());
         assertEquals( "Artifact path", "group/artifact/version/artifact-version.type", parser.getArtifactPath() );
-        assertEquals( "repository", new URL( "http://repository/" ), parser.getRepositoryURL().getURL() );
+        assertEquals( "repository", URI.create( "http://repository/" ), parser.getRepositoryURL().getURI() );
     }
 
     @Test
@@ -139,7 +142,7 @@ public class ParserTest
         assertEquals( "Artifact path", "group/artifact/version/artifact-version-classifier.type",
                       parser.getArtifactPath()
         );
-        assertEquals( "repository", new URL( "http://repository/" ), parser.getRepositoryURL().getURL() );
+        assertEquals( "repository", URI.create( "http://repository/" ), parser.getRepositoryURL().getURI() );
     }
 
     @Test
@@ -151,9 +154,9 @@ public class ParserTest
         assertEquals( "Artifact", "artifact", parser.getArtifact() );
         assertEquals( "Version", "version", parser.getVersion() );
         assertEquals( "Type", "type", parser.getType() );
-        assertEquals( "Classifier", null, parser.getClassifier() );
+        assertNull("Classifier", parser.getClassifier());
         assertEquals( "Artifact path", "group/artifact/version/artifact-version.type", parser.getArtifactPath() );
-        assertEquals( "repository", null, parser.getRepositoryURL() );
+        assertNull("repository", parser.getRepositoryURL());
     }
 
     @Test
@@ -169,7 +172,7 @@ public class ParserTest
         assertEquals( "Artifact path", "group/artifact/version/artifact-version-classifier.type",
                       parser.getArtifactPath()
         );
-        assertEquals( "repository", null, parser.getRepositoryURL() );
+        assertNull("repository", parser.getRepositoryURL());
     }
 
     @Test
@@ -185,7 +188,7 @@ public class ParserTest
         assertEquals( "Artifact path", "group/artifact/version/artifact-version-classifier.jar",
                       parser.getArtifactPath()
         );
-        assertEquals( "repository", null, parser.getRepositoryURL() );
+        assertNull("repository", parser.getRepositoryURL());
     }
 
     @Test
@@ -201,7 +204,7 @@ public class ParserTest
         assertEquals( "Artifact path", "group/artifact/LATEST/artifact-LATEST-classifier.type",
                       parser.getArtifactPath()
         );
-        assertEquals( "repository", null, parser.getRepositoryURL() );
+        assertNull("repository", parser.getRepositoryURL());
     }
 
     @Test
@@ -217,7 +220,7 @@ public class ParserTest
         assertEquals( "Artifact path", "group/artifact/LATEST/artifact-LATEST-classifier.jar",
                       parser.getArtifactPath()
         );
-        assertEquals( "repository", null, parser.getRepositoryURL() );
+        assertNull("repository", parser.getRepositoryURL());
     }
 
     @Test
@@ -227,8 +230,8 @@ public class ParserTest
         Parser parser = new Parser( "jar:http://repository/repository.jar!/@id=fake!group/artifact/0.1.0" );
         assertEquals( "Artifact path", "group/artifact/0.1.0/artifact-0.1.0.jar", parser.getArtifactPath() );
         assertEquals( "repository",
-                      new URL( "jar:http://repository/repository.jar!/" ),
-                      parser.getRepositoryURL().getURL()
+                URI.create( "jar:http://repository/repository.jar!/" ),
+                      parser.getRepositoryURL().getURI()
         );
     }
 
@@ -239,8 +242,8 @@ public class ParserTest
            Parser parser = new Parser( " http://repository/repository@id=fake!group/artifact/0.1.0" );
            assertEquals( "Artifact path", "group/artifact/0.1.0/artifact-0.1.0.jar", parser.getArtifactPath() );
            assertEquals( "repository",
-                         new URL( "http://repository/repository/" ),
-                         parser.getRepositoryURL().getURL()
+                   URI.create( "http://repository/repository/" ),
+                         parser.getRepositoryURL().getURI()
            );
        }
 
@@ -292,6 +295,111 @@ public class ParserTest
         assertEquals( "Artifact local metadata path", "group/artifact/maven-metadata-local.xml",
                       parser.getArtifactLocalMetdataPath()
         );
+    }
+
+    @Test
+    public void justURLsAndURIs() throws URISyntaxException, MalformedURLException {
+        String fullMvnURL1 = "mvn:group/artifact/version";
+        String fullMvnURL2 = "mvn:http://localhost/nexus!group/artifact/version";
+
+        assertTrue(URI.create(fullMvnURL1).isAbsolute()); // because it has scheme
+        assertTrue(URI.create(fullMvnURL2).isAbsolute()); // because it has scheme
+        assertTrue(URI.create(fullMvnURL1).isOpaque()); // because there's no "/" after scheme
+        assertTrue(URI.create(fullMvnURL2).isOpaque()); // because there's no "/" after scheme
+        assertEquals("group/artifact/version", URI.create(fullMvnURL1).getSchemeSpecificPart());
+        assertEquals("http://localhost/nexus!group/artifact/version", URI.create(fullMvnURL2).getSchemeSpecificPart());
+
+        assertFalse(URI.create("file:/tmp").isOpaque());
+        assertEquals("/tmp@", URI.create("file:/tmp%40").getSchemeSpecificPart());
+        assertEquals("/tmp%40", URI.create("file:/tmp%40").getRawSchemeSpecificPart());
+
+        URI uri = URI.create("https://scott:tiger@example.com/maven");
+        assertEquals("scott:tiger@example.com", uri.getRawAuthority());
+        assertEquals("scott:tiger", uri.getRawUserInfo());
+
+        // URI.create(String) == new URI(String) + exception handling
+        URI uri1 = URI.create("/%2F/");
+        assertEquals("///", uri1.getPath());
+        assertEquals("/%2F/", uri1.getRawPath());
+        URI uri2 = new URI("/%2F/");
+        assertEquals("///", uri2.getPath());
+        assertEquals("/%2F/", uri2.getRawPath());
+        URI uri3 = new URI(null, null, null, -1, "/%2F/", null, null);
+        assertEquals("/%2F/", uri3.getPath());
+        assertEquals("/%252F/", uri3.getRawPath());
+
+        // encoding character: replacing it with escaped octets
+        // quoting: encoding, but for illegal characters
+        //
+        // escaped octets may appear in userInfo, path, query and fragment, each
+        // component has own set of illegal characters that need to be quoted
+
+        // single-arg constructor requires that any illegal character is already quoted
+        try {
+            URI uri4 = URI.create("https://host/maven%");
+            fail("% has to be quoted");
+        } catch (IllegalArgumentException expected) {
+        }
+        URI uri5 = URI.create("https://h@o@st/maven");
+        // two "@"s is an error within authority and it resets already collected user info / host
+        assertNull(uri5.getUserInfo());
+        assertNull(uri5.getHost());
+        assertEquals("h@o@st", uri5.getAuthority());
+        // multi-arg constructor quote illegal characters automatically
+        // "%" is always quoted as "%25"
+        // user info can't include "@", so it is quoted as "%40"
+        URI uri6 = new URI("https", ";:&=+$,sco:tt@x:tige%3Ar@123", "host", -1, "/#maven%", "", null);
+        assertEquals("/#maven%", uri6.getPath());
+        assertEquals("/%23maven%25", uri6.getRawPath());
+        // user:password in userInfo part of authority is not mandated (quite opposite - it's not recommended)
+        // by RFC2396. ":" is not interpretted by URI implementation itself, it's up to the user to interpret it
+        assertEquals(";:&=+$,sco:tt@x:tige%3Ar@123", uri6.getUserInfo());
+        assertEquals(";:&=+$,sco:tt%40x:tige%253Ar%40123", uri6.getRawUserInfo());
+
+        // java.net.URI.quote() is called in several places:
+        // - fragment
+        // - path
+        // - query
+        // - authority
+
+        // URL is like more specific URI with attached handler (for URL.openConnection() / URL.openStream())
+        // URL uses java.net.URLStreamHandler.parseURL() to parse the value
+        // URL uses java.net.URI.Parser.parse()
+        URL url1 = new URL("file://user:password@host:1234/etc/passwd%25?a=b#root");
+        URI url1uri = url1.toURI();
+        assertEquals("user:password", url1.getUserInfo());
+        assertEquals("file", url1uri.getScheme());
+        assertEquals("user:password@host:1234", url1uri.getAuthority());
+        assertEquals("user:password", url1uri.getUserInfo());
+        assertEquals("host", url1uri.getHost());
+        assertEquals(1234, url1uri.getPort());
+        assertEquals("/etc/passwd%", url1uri.getPath());
+        assertEquals("/etc/passwd%25", url1uri.getRawPath());
+        assertEquals("a=b", url1uri.getQuery());
+        assertEquals("root", url1uri.getFragment());
+    }
+
+    @Test
+    public void fullMvnURI() throws Exception {
+        // even if "split" option makes sense only for file:-based local/default repositories, it is always parsed
+        Parser p = new Parser("https://sco%3Att:ti%25ger@example.com/tmp/repository@snapshots@id=my-repo@split!commons-pax/commons-pax-url/1.0/xml/features");
+
+        assertEquals("commons-pax/commons-pax-url/1.0/commons-pax-url-1.0-features.xml", p.getArtifactPath());
+        assertEquals("commons-pax", p.getGroup());
+        assertEquals("commons-pax-url", p.getArtifact());
+        assertEquals("1.0", p.getVersion());
+        assertEquals("xml", p.getType());
+        assertEquals("features", p.getClassifier());
+
+        MavenRepositoryURL repositoryURL = p.getRepositoryURL();
+        assertEquals("my-repo", repositoryURL.getId());
+        assertTrue(repositoryURL.isSplit());
+        assertEquals("installed", repositoryURL.getSplitLocalPrefix());
+        assertEquals("sco:tt", repositoryURL.getUsername());
+        assertEquals("ti%ger", new String(repositoryURL.getPassword()));
+
+        assertEquals("", new String(new Parser("https://sco%3Att:@example.com!com.example/xyz").getRepositoryURL().getPassword()));
+        assertNull(new Parser("https://sco%3Att@example.com!com.example/xyz").getRepositoryURL().getPassword());
     }
 
 }
